--- a/overwatch-server/src/main/resources/application.yml
+++ b/overwatch-server/src/main/resources/application.yml
@@ -3,15 +3,15 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://114.116.51.27:33306/software?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:33306/software?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: xNXhjl68PeU55aHOaMd3WzLFuhs3csU
+    password: 
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   redis:
-    host: 114.116.51.27
-    port: 63379
-    password: Cfru0NJ3bevz3r0BQhXj40Ifel0J00i
+    host:
+    port:
+    password: 
 
 mybatis-plus:
   global-config:
@@ -20,5 +20,5 @@ mybatis-plus:
       id-type: auto
 
 register:
-  ip: 101.34.241.81
-  port: 8000
+  ip: 
+  port: 
