--- a/overwatch-client/src/main/resources/application.yml
+++ b/overwatch-client/src/main/resources/application.yml
@@ -1,30 +1,25 @@
 
-# ???? WEB ????
 server:
   port: 9000
 
-# ?????
-# ?????????
+
 spring:
   datasource:
-    url: jdbc:mysql://114.116.51.27:33306/software?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:33306/software?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: xNXhjl68PeU55aHOaMd3WzLFuhs3csU
+    password: 
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   redis:
-    host: 114.116.51.27
-    port: 63379
-    password: Cfru0NJ3bevz3r0BQhXj40Ifel0J00i
+    host: 
+    port: 
+    password: 
 
 
 mybatis-plus:
-  # ??????
   mapper-locations:
-    # ????
     - classpath:mapper/*.xml
 
   global-config:
     db-config:
-      # ??????
       id-type: auto
